<resources>

    <!-- General -->
    <string name="example_title">ExampleFragment</string>
    <string name="example_textview">Press the button to generate a random number</string>
    <string name="example_randomize">Randomize</string>
    <string name="example_wolox">WOLOX</string>
    <string name="example_message">The presenter generated the number %1$d and this view is displaying it</string>
    <string name="page_1_title">Username: %1$s</string>
    <string name="page_1_toolbar_title">Random number example</string>
    <string name="page_2_title">Page 2</string>
    <string name="page_2_toolbar_title">Example Request</string>
    <string name="fragment_example_username">Username</string>
    <string name="fragment_example_login">Login</string>
    <string name="condiciones">By joining you agree to our <a href="https://www.wolox.com.ar/">Terms &amp; Conditions</a></string>
    <string name="login">Log in</string>
    <string name="signup">Sign Up</string>
    <string name="first_name">Email</string>
    <string name="last_name">Password</string>
    <string name="error_campo_incompleto">Este campo es requerido</string>
    <string name="error_formato_invalido">The format of this field is incorrect</string>
    <string name="saved_user_email">email</string>
    <string name="preference_file_key">wolox</string>
    <string name="loading">Loading...</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="user_not_found">User not found</string>
    <string name="no_internet_conection">There is no Internet connection</string>
    <string name="wolox">Wolox</string>
    <string name="news">News</string>
    <string name="profile">Profile</string>
    <string name="error_loading_news">Error loading the news</string>
    <string name="no_news_to_show">There is no news to show</string>
    <string name="add_news">Add a new news</string>
    <string name="news_updated">The news was updated</string>

</resources>